# scale-signal-processing

dev_arduino/: CMakeLists.txt  README.md
dev_arduino/data/: data.csv  data_with_extra_drift.csv
dev_arduino/src/: MockArduino.cpp  MockArduino.h  constants.h  main.cpp  main.ino
dev_arduino/src/sensors/: Scale.cpp  Scale.h
dev_arduino/src/signal_processor/: SignalProcessor.cpp  SignalProcessor.h
dev_arduino/src/signal_processor/.doc/: SignalProcessor.uml
dev_arduino/src/timer/: Timer.cpp  Timer.h
